# Cashflow_Modellierung

./: README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
data/: __init__.py
memory-bank/: architecture.md  implementation-plan.md  product_requirements.md  progress.md  tech-stack.md
models/: __init__.py  cash_flow.py  product_template.py
services/: __init__.py  date_utils.py  portfolio.py  schedule_generator.py
tests/: test_date_utils.py  test_portfolio.py  test_schedule_generator.py
ui/: __init__.py
utils/: __init__.py
